Fix Apple OAuth: Load private key from classpath instead of filesystem (works in JAR)